deployments/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpip
  labels:
    app: gpip
    service: gpip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gpip
      service: gpip
  template:
    metadata:
      labels:
        app: gpip
        service: gpip
    spec:
      containers:
      - name: gpip
        image: redeployab/gpip:1.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5050
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 200m
        readinessProbe:
          tcpSocket:
            port: 5050
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 5050
          initialDelaySeconds: 15
          periodSeconds: 20
