deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gpip
spec:
  selector:
    service: gpip
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 5050
    targetPort: 5050
